fix: OpenAI evaluation identity 검증 보강